// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/Desktop hook toggles correctly 1`] = `
.emotion-0 .MuiDrawer-paperAnchorDockedLeft {
  border: none;
}

.emotion-1 {
  background-color: #FFFFFF;
  color: #000000;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: fixed;
  z-index: 1100;
  top: 0;
  left: auto;
  right: 0;
  background-color: #FF835B;
  color: #FFFFFF;
}

.emotion-1 {
  background-image: none;
}

@media print {
  .emotion-1 {
    position: absolute;
  }
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  background: #F8F8F8;
  color: #414141;
  width: calc(100% - 59px);
  z-index: 1201;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

@media (min-width: 1280px) {
  .emotion-1.emotion-1 {
    height: 160px;
    overflow: hidden;
  }
}

.emotion-1.emotion-1.MuiPaper-elevation4 {
  box-shadow: none;
}

.emotion-1.emotion-1.open {
  margin-left: 230px;
  width: calc(100% - 230px);
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

.emotion-2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 230px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  white-space: nowrap;
  padding-left: 16px;
  box-sizing: border-box;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  overflow-x: hidden;
  width: 59px;
}

.emotion-3 {
  background-color: #FFFFFF;
  color: #000000;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  z-index: 1200;
  -webkit-overflow-scrolling: touch;
  position: fixed;
  top: 0;
  outline: 0;
  left: 0;
  border-right: 1px solid #E8E8E8;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  overflow-x: hidden;
  width: 59px;
}

.emotion-3 {
  background-image: none;
}

.emotion-4 {
  width: 216px;
  padding: 16px 14px 20px;
}

.emotion-4:hover {
  cursor: pointer;
}

<div
  className="emotion-0"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed emotion-1"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked closed emotion-2"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper closed MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft emotion-3"
    >
      <svg
        aria-label="toggle menu"
        className="emotion-4"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/Desktop it renders 1`] = `
.emotion-0 .MuiDrawer-paperAnchorDockedLeft {
  border: none;
}

.emotion-1 {
  background-color: #FFFFFF;
  color: #000000;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  position: fixed;
  z-index: 1100;
  top: 0;
  left: auto;
  right: 0;
  background-color: #FF835B;
  color: #FFFFFF;
}

.emotion-1 {
  background-image: none;
}

@media print {
  .emotion-1 {
    position: absolute;
  }
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  background: #F8F8F8;
  color: #414141;
  width: calc(100% - 59px);
  z-index: 1201;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

@media (min-width: 1280px) {
  .emotion-1.emotion-1 {
    height: 160px;
    overflow: hidden;
  }
}

.emotion-1.emotion-1.MuiPaper-elevation4 {
  box-shadow: none;
}

.emotion-1.emotion-1.open {
  margin-left: 230px;
  width: calc(100% - 230px);
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms,margin 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

.emotion-2 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 230px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  white-space: nowrap;
  padding-left: 16px;
  box-sizing: border-box;
  width: 230px;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

.emotion-3 {
  background-color: #FFFFFF;
  color: #000000;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: none;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  z-index: 1200;
  -webkit-overflow-scrolling: touch;
  position: fixed;
  top: 0;
  outline: 0;
  left: 0;
  border-right: 1px solid #E8E8E8;
  width: 230px;
  -webkit-transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  transition: width 225ms cubic-bezier(0.4, 0, 1, 1) 0ms;
}

.emotion-3 {
  background-image: none;
}

.emotion-4 {
  width: 216px;
  padding: 16px 14px 20px;
}

.emotion-4:hover {
  cursor: pointer;
}

<div
  className="emotion-0"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed open mui-fixed emotion-1"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked open emotion-2"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper open MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft emotion-3"
    >
      <svg
        aria-label="toggle menu"
        className="emotion-4"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;
